--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       { "src": "api/index.js", "use": "@vercel/node" },
-      { "src": "frontend/**/*", "use": "@vercel/static-build", "config": { "distDir": "frontend/out" } }
+      { "src": "frontend/**/*", "use": "@vercel/static-build", "config": { "distDir": "frontend" } }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/index.js" },
