--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "frontend/**/*", "use": "@vercel/static-build", "config": { "distDir": "frontend" } }
+    { "src": "frontend/**/*", "use": "@vercel/static-build", "config": { "distDir": "frontend" } },
+    { "src": "build.sh", "use": "@vercel/static-build" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
